@@ -1,3 +1,10 @@
+2000-07-18  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* mux.c (free_name): Fix typo in comment.
+	* usermux.c: Likewise.
+	* usermux.h: Likewise
+	(struct usermux): Likewise.
+	
 1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* mux.c: Add #include <sys/mman.h> for munmap decl.
